--- a/dll/dll.vcxproj.filters
+++ b/dll/dll.vcxproj.filters
@@ -38,4 +38,9 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="dll.def">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
